--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ body {
      margin: 20px;
      font-size: large;
   }
+  ul{
+    font-weight: bold;
+  }
   ul li{
     color: rgb(4, 40, 87);
     font-size: large;
