--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,53 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(197, 234, 247);
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: rgb(13, 65, 88);
   }
   
   h1 {
     color: rgb(219, 226, 255);
     text-align: center;
     font-size: xx-large;
-    margin: 50px ;
-    background-color: rgb(21, 82, 100);
+    margin: 40px ;
+    background-color: #8d2141;
   }
   
-  p {
+  #paragraph1 {
     font-size: larger;
-    font-family:sans-serif;
-    color: rgb(4, 40, 87);
     margin: 40px;
+    line-height: 25px;
+  }
+
+  #paragraph2 {
+    font-size: larger;
+    margin: 13px;
+    font-weight: bold;
+    color: #8d2141;
+  }
+
+  span {
+    font-weight: bold;
+    color: #8d2141;
   }
 
  footer {
-     color: rgb(58, 14, 109);
+     color: #8d2141;
      margin: 20px;
      font-size: large;
   }
-  ul{
-    font-weight: bold;
-  }
+  
   ul li{
-    color: rgb(4, 40, 87);
     font-size: large;
-    font-family:sans-serif;
+    margin-left: 35px;
+    line-height:30px;
   }
   ol {
-    margin: 20px;
+    margin: 30px;
+    background-color: #F6DFC7;
+    line-height: 25px;
+    margin-right: 65em;
   }
-  
-   h3,ol li{
-    color: rgb(12, 38, 63);
+  ol li{
     font-size: large;
     margin-left: 20px;
   }
